--- a/Style.css
+++ b/Style.css
@@ -4,6 +4,7 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
+  background-color: #666;
 }
 input[type=text], input[type=password] {
   width: 100%;
