--- a/Style.css
+++ b/Style.css
@@ -113,7 +113,7 @@ footer {
   top: 10px;
   left: 10px;
   padding: 25px;
-  text-align: left;
+  text-align: center;
   font-size: 35px;
   font-family: Courier New;
   color: black;
