--- a/Style.css
+++ b/Style.css
@@ -4,7 +4,7 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: #666;
+  background-color: rgb(32, 32, 32);
 }
 
 input[type=text], input[type=password] {
@@ -90,7 +90,7 @@ nav ul {
 article {
   -webkit-flex: 3;
   -ms-flex: 3;
-  flex: 3;
+  flex: 4;
   background-color: #f1f1f1;
   padding: 10px;
 }
@@ -99,8 +99,10 @@ article {
 footer {
   background-color: #777;
   padding: 20px;
-  text-align: left;
-  color: white;
+  text-align: center;
+  font-size: 15px;
+  font-family: Courier;
+  color: rgb(32, 32, 32);
 }
 
 .header img {
