--- a/Style.css
+++ b/Style.css
@@ -101,7 +101,7 @@ footer {
   padding: 20px;
   text-align: center;
   font-size: 15px;
-  font-family: Courier;
+  font-family: Courier 'Courier New', Courier, monospace;
   color: rgb(32, 32, 32);
 }
 
