--- a/Style.css
+++ b/Style.css
@@ -4,7 +4,7 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: rgb(32, 32, 32);
+  background-color: rgb(73,73,73);
 }
 
 input[type=text], input[type=password] {
