--- a/Style.css
+++ b/Style.css
@@ -14,8 +14,6 @@
   display: none;
 }
 
-.recentNews {
-}
 .recentNews .news-title {
     text-align:center;
     padding-top:0px;
@@ -28,7 +26,7 @@
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
-    margin-bottom: 10px;
+    margin-bottom: 0px;
 }
 .recentNews .ct-blog {
     margin-bottom: 30px;
@@ -44,7 +42,8 @@
     background-color: #e6e6e6;
 }
 .ct-blog .fauxcrop {
-    height: 180px;
+    height: 100px;
+    width: 100px;
     overflow: hidden;
 }
 .ct-blog .fauxcrop img {
@@ -53,24 +52,6 @@
 .ct-blog-content {
     display: table;
     padding: 30px 0 28px;
-}
-.ct-blog-content .ct-blog-date {
-    border-right: 1px solid #95A5A6;
-    display: table-cell;
-    font-family: "Lato", sans-serif;
-    padding: 0px 18px 0px 15px;
-    text-align: center;
-}
-.ct-blog-content .ct-blog-date span {
-    font-size: 16px;
-    color: rgb(20, 117, 175);  
-    font-weight: 700;
-    display: block;
-    line-height: 1;
-}
-.ct-blog-content .ct-blog-date strong {
-    font-size: 25px;
-    color: rgb(20, 117, 175);  
 }
 .ct-blog-content .ct-blog-header {
     color: #000;
