--- a/Style.css
+++ b/Style.css
@@ -90,7 +90,7 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: rgb(30,30,30);
+  background-color: rgb(50,50,50);
 }
 
 input[type=text], input[type=password] {
@@ -135,7 +135,7 @@ img.avatar {
 
 .container {
   padding: 16px;
-  background-color: black;
+  background-color: #666;
 }
 
 span.psw {
@@ -202,7 +202,7 @@ footer {
   top: 10px;
   left: 10px;
   padding: 25px;
-  text-align: center;
+  text-align: left;
   font-size: 35px;
   font-family: Courier New;
   color: black;
