--- a/Style.css
+++ b/Style.css
@@ -164,7 +164,7 @@ section {
 
 /* Style the navigation menu */
 nav {
-  /*float: right;*/
+  float: right;
 }
 
 /* Style the list inside the menu */
@@ -172,7 +172,7 @@ nav ul {
   position: relative;
   top: -20px;
   left: -20;
-  list-style-type: none;
+  /*list-style-type: none;*/
 
 }
 
