--- a/Style.css
+++ b/Style.css
@@ -164,7 +164,7 @@ section {
 
 /* Style the navigation menu */
 nav {
-  float: right;
+  /*float: right;*/
 }
 
 /* Style the list inside the menu */
