--- a/Style.css
+++ b/Style.css
@@ -170,9 +170,9 @@ nav {
 /* Style the list inside the menu */
 nav ul {
   position: relative;
-  top: -20px;
+  top: -15px;
   left: -20;
-  /*list-style-type: none;*/
+  list-style-type: none;
 
 }
 
