--- a/Style.css
+++ b/Style.css
@@ -90,7 +90,7 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: rgb(50,50,50);
+  background-color: rgb(89, 91, 102);
 }
 
 input[type=text], input[type=password] {
