--- a/Style.css
+++ b/Style.css
@@ -90,7 +90,7 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-color: rgb(89, 91, 102);
+  background-image: linear-gradient(rgba(41, 41, 41, 0), rgb(98, 117, 138));
 }
 
 input[type=text], input[type=password] {
