--- a/Style.css
+++ b/Style.css
@@ -90,7 +90,7 @@
 
 body {
   font-family: Arial, Helvetica, sans-serif;
-  background-image: linear-gradient(rgba(41, 41, 41), rgb(98, 117, 138));
+  background-image: linear-gradient(rgb(80, 80, 80), rgb(39, 46, 53));
 }
 
 input[type=text], input[type=password] {
