--- a/Style.css
+++ b/Style.css
@@ -151,6 +151,7 @@ span.psw {
 /* Style the header */
 header {
   background-color: #666;
+  padding: 20px;
   text-align: center;
   font-size: 35px;
   color: white;
