--- a/Style.css
+++ b/Style.css
@@ -89,6 +89,8 @@
 }
 
 body {
+  padding:0;
+  margin:0;
   font-family: Arial, Helvetica, sans-serif;
   background-image: linear-gradient(rgb(80, 80, 80), rgb(39, 46, 53));
 }
