--- a/Style.css
+++ b/Style.css
@@ -87,9 +87,12 @@
   from {opacity: .4}
   to {opacity: 1}
 }
+html {
+  padding:0;
+  margin:0;
+}
 
 body {
-  padding-top:0;
   padding:0;
   margin:0;
   font-family: Arial, Helvetica, sans-serif;
