--- a/Style.css
+++ b/Style.css
@@ -18,6 +18,7 @@
 .prev, .next {
   cursor: pointer;
   position: absolute;
+  top: 0;
   top: 50%;
   width: auto;
   margin-top: -22px;
@@ -27,12 +28,15 @@
   font-size: 18px;
   transition: 0.6s ease;
   border-radius: 0 3px 3px 0;
-  user-select: none;
 }
 
 /* Position the "next button" to the right */
 .next {
   right: 0;
+  border-radius: 3px 0 0 3px;
+}
+.prev {
+  right: -100;
   border-radius: 3px 0 0 3px;
 }
 
