--- a/Style.css
+++ b/Style.css
@@ -210,8 +210,8 @@ footer {
 
 .header img {
   position: relative;
-  top: 0px;
-  float: left;
+  top: 40px;
+  floa35 left;
   width: 50px;
   height: 50px;
 }
