--- a/Style.css
+++ b/Style.css
@@ -135,7 +135,11 @@ button:hover {
   margin: 24px 0 12px 0;
 }
 img.avatar {
-  width: 40%;
+  position: relative;
+  top: 40px;
+  float:35 left;
+  width: 50px;
+  height: 50px;
   border-radius: 20%;
 }
 
@@ -211,7 +215,7 @@ footer {
 .header img {
   position: relative;
   top: 40px;
-  floa35 left;
+  float:35 left;
   width: 50px;
   height: 50px;
 }
