--- a/Style.css
+++ b/Style.css
@@ -131,13 +131,9 @@ button:hover {
 }
 
 .imgcontainer {
-  text-align: center;
+  text-align: left;
   margin: 24px 0 12px 0;
 }
-img.avatar {
-  border-radius: 20%;
-}
-
 .container {
   padding: 15px;
   float: center;
@@ -212,6 +208,7 @@ footer {
   top: 0px;
   width: 50px;
   height: 50px;
+  border-radius:20%;
 }
 .container h1 {
   position: relative;
