--- a/Style.css
+++ b/Style.css
@@ -131,8 +131,12 @@ button:hover {
 }
 
 .imgcontainer {
-  text-align: left;
+  text-align: center;
   margin: 24px 0 12px 0;
+}
+img.avatar {
+  width: 40%;
+  border-radius: 50%;
 }
 .container {
   padding: 15px;
@@ -204,11 +208,10 @@ footer {
 }
 
 .header img {
-  position: relative;
-  top: 0px;
+  float: left;
   width: 50px;
   height: 50px;
-  border-radius:20%;
+  border-radus:20%;
 }
 .container h1 {
   position: relative;
