--- a/Style.css
+++ b/Style.css
@@ -136,7 +136,7 @@ button:hover {
 }
 img.avatar {
   width: 40%;
-  border-radius: 50%;
+  border-radius: 20%;
 }
 .container {
   padding: 15px;
@@ -211,6 +211,7 @@ footer {
   float: left;
   width: 50px;
   height: 50px;
+  right:50;
   border-radus:20%;
 }
 .container h1 {
