--- a/Style.css
+++ b/Style.css
@@ -210,9 +210,10 @@ footer {
 .header img {
   float: left;
   position: relative;
-  width: 50px;
-  top:20px;
-  height: 50px;
+  width: 75px;
+  top:10px;
+  left:10px;
+  height: 75px;
   border-radius:20%;
 }
 .container h1 {
