--- a/Style.css
+++ b/Style.css
@@ -258,6 +258,12 @@ footer {
       width : 100px;
       height: auto;
       border-radius:10%;
+      padding:0px;
+  }
+  .newstitle {
+    text-align:center;
+    color:white;
+    font-size: 40px;
   }
   
 }
