--- a/Style.css
+++ b/Style.css
@@ -233,7 +233,7 @@ footer {
   position: relative;
   top: 15px;
   text-align: left;
-  font-size: 20px;
+  font-size: 1.25em;
   font-family: Courier, sans-serif;
   color: white;
 }
@@ -267,7 +267,7 @@ footer {
   }
   .container {
     padding:0px;
-    margin:0px;
+    margin:5px;
   }
   
 }
