--- a/Style.css
+++ b/Style.css
@@ -231,7 +231,7 @@ footer {
 }
 .container h1 {
   position: relative;
-  top: 15px;
+  top: 1em;
   text-align: left;
   font-size: 1.25em;
   font-family: Courier, sans-serif;
@@ -266,7 +266,7 @@ footer {
     font-size: 10px;
   }
   .container {
-    padding:0px;
+    padding:1em;
     margin:5px;
   }
   
