--- a/Style.css
+++ b/Style.css
@@ -263,7 +263,7 @@ footer {
   .newstitle {
     text-align:center;
     color:white;
-    font-size: 10px;
+    font-size: 0.8em;
   }
   .container {
     padding:5px;
