--- a/Style.css
+++ b/Style.css
@@ -94,6 +94,7 @@ html {
 }
 
 body {
+  flex-direction: column;
   padding:0;
   margin:0;
   font-family: Arial, Helvetica, sans-serif;
@@ -114,7 +115,6 @@ button {
   background-color: #04AA6D;
   color: white;
   padding: 14px 20px;
-  margin: 8px 0;
   border: none;
   cursor: pointer;
   width: 100%;
@@ -210,10 +210,15 @@ article {
   background-color: #f1f1f1;
   padding: 10px;
 }
-
+.hidden {
+  z-index: 1;
+  position:absolute;
+}
 footer {
   background-color: #777;
   padding: 20px;
+  position: relative;
+  z-index: 2;
   text-align: center;
   font-size: 15px;
   font-family: Courier 'Courier New', Courier, monospace;
