--- a/Style.css
+++ b/Style.css
@@ -110,6 +110,34 @@ input[type=text], input[type=password] {
   box-sizing: border-box;
   background-color: #666;
 }
+.typewriter h1 {
+  overflow: hidden; /* Ensures the content is not revealed until the animation */
+  border-right: .15em solid rgb(15, 64, 8); /* The typwriter cursor */
+  white-space:nowrap; /* Keeps the content on a single line */
+  margin: 0 auto; /* Gives that scrolling effect as the typing happens */
+  padding: 10px;
+  letter-spacing: .07em; /* Adjust as needed */
+  font-family: 'Courier New', monospace;
+  font-size: 16px;
+  animation: 
+    typing 10s steps(40, end),
+    blink-caret .75s step-end infinite;
+}
+
+@keyframes typing {
+  0% {
+    width: 0
+  }
+  50% {
+    width: 100%
+  }
+}
+
+/* The typewriter cursor effect */
+@keyframes blink-caret {
+  from, to { border-color: transparent }
+  50% { border-color: rgb(15, 64, 8); }
+}
 
 button {
   background-color: #04AA6D;
